--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -67,11 +67,12 @@
             border-top-color 0.2s ease 0s;
 }
 .inputWrapper input:focus {
-    border-top: 1px solid var(--color-main-red);
-    border-left: 1px solid var(--color-main-red);
-    border-right: 1px solid var(--color-main-red);
+    border-top: 3px solid transparent;
+    border-left: 3px solid transparent;
+    border-right: 3px solid transparent;
     border-bottom: none;
     border-radius: 20px 20px 0 0;
+    box-shadow: 0 0 10px 10px rgba(0,0,0,0.05);
 }
 .inputWrapper i {
     position: absolute;
@@ -146,9 +147,11 @@
 
     background-color: white;
 
-    border-left: 1px solid var(--color-main-red);
-    border-right: 1px solid var(--color-main-red);
-    border-bottom: 1px solid var(--color-main-red);
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+
+    box-shadow: 0 20px 10px 10px rgba(0,0,0,0.05);
 
     border-radius: 0 0 20px 20px;
     z-index: 99999;
