--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -57,14 +57,6 @@
     border-left: 1px solid rgba(0,0,0,0.3);
     outline: none;
     border-radius: 20px;
-
-    transition:
-            border-left 0.2s ease 0s,
-            border-right 0.2s ease 0s,
-            border-top 0.2s ease 0s,
-            border-left-color 0.2s ease 0s,
-            border-right-color 0.2s ease 0s,
-            border-top-color 0.2s ease 0s;
 }
 .inputWrapper input:focus {
     border-top: 3px solid transparent;
@@ -151,7 +143,8 @@
     border-right: 1px solid transparent;
     border-bottom: 1px solid transparent;
 
-    box-shadow: 0 20px 10px 10px rgba(0,0,0,0.05);
+    box-shadow: -10px 5px 10px rgba(0,0,0,0.05),
+    10px 5px 10px rgba(0,0,0,0.05);
 
     border-radius: 0 0 20px 20px;
     z-index: 99999;
