--- a/src/pages/Home/GridPreview/GridPreview.module.css
+++ b/src/pages/Home/GridPreview/GridPreview.module.css
@@ -54,6 +54,12 @@
     filter: brightness(50%);
 }
 
+
+@media (max-width: 1100px) {
+    .gridContainer > a p {
+        font-size: 3.2rem;
+    }
+}
 @media (max-width: 980px) {
     .gridContainer {
         height: 500px;
