--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,11 +1,3 @@
-.headerLang {
-    width: 100%;
-    height: 50px;
-
-    max-width: 1200px;
-    padding: 20px 20px;
-    margin: 0 auto;
-}
 .header {
     width: 100%;
     height: 100px;
@@ -17,6 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 5rem;
 
     width: 100%;
     height: 100%;
@@ -49,7 +42,7 @@
     display: flex;
     align-items: center;
 
-    width: 50%;
+    width: 100%;
     height: 45px;
 }
 
@@ -91,6 +84,7 @@
 .navbar {
     height: 100%;
     width: fit-content;
+    min-width: fit-content;
 
     display: flex;
     align-items: center;
@@ -121,6 +115,7 @@
     justify-content: center;
 
     font-size: 1.2rem;
+    font-family: sans-serif!important;
 
     color: white;
 
@@ -182,16 +177,21 @@
 }
 
 @media (max-width: 980px) {
-    .header {
-        padding: 0 20px;
+    .container {
+        padding-right: 3rem;
+        gap: 3rem;
     }
-    .logo {
-        height: 60%;
+    .logoArea {
+        display: none !important;
     }
+
     .container > a p {
         display: none;
     }
-    .navbar > :first-child {
+    .navbar {
+        gap: 3rem;
+    }
+    .navbar > :nth-child(2) {
         display: none;
     }
 
