--- a/src/pages/Home/GridPreview/GridPreview.module.css
+++ b/src/pages/Home/GridPreview/GridPreview.module.css
@@ -9,7 +9,9 @@
     grid-template-columns: 2fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
 
-    height: 50rem;
+    min-height: 47rem;
+    height: calc(100vh - 140px);
+    max-height: 50rem;
     width: 100%;
 }
 .gridContainer > a {
@@ -81,6 +83,6 @@
     }
 
     .gridContainer > a p {
-        font-size: 2rem;
+        font-size: 2.6rem;
     }
 }
