--- a/src/components/modalCart/ModalCart.module.css
+++ b/src/components/modalCart/ModalCart.module.css
@@ -29,6 +29,9 @@
 .window {
     position: relative;
 
+    display: flex;
+    flex-direction: column;
+
     padding: 20px;
 
     width: 500px;
@@ -52,6 +55,8 @@
 .content {
     margin: 20px 0;
 
+    flex-grow: 1;
+
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -61,7 +66,7 @@
     width: 100%;
     height: calc(100% - 200px);
 
-    overflow-y: scroll;
+    overflow: scroll;
 }
 .content::-webkit-scrollbar {
     width: 10px;
@@ -95,12 +100,13 @@
 
 .sumArea {
     display: flex;
+    align-items: center;
     justify-content: space-between;
 
-    margin: 20px 0;
+    margin-top: 20px;
 
     width: 100%;
-    height: 110px;
+    height: fit-content;
 }
 
 .textArea {
@@ -109,8 +115,6 @@
 }
 
 .sumArea button {
-    align-self: flex-end;
-
     background-color: initial;
     border: 2px solid black;
     color: black;
