--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -69,6 +69,7 @@
 
     cursor: pointer;
     transition: all 0.3s ease;
+    user-select: none;
 }
 .links p:hover {
     color: var(--color-main-red);
