--- a/src/components/LangSwitcher/LangSwitcher.module.css
+++ b/src/components/LangSwitcher/LangSwitcher.module.css
@@ -1,4 +1,8 @@
 .lang {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
     user-select: none;
     cursor: pointer;
 
@@ -7,4 +11,7 @@
 
     min-width: 2.2rem;
     max-width: 2.2rem;
+}
+.underline:hover {
+    text-decoration: underline;
 }
